10/8/08 - add project name constant
10/8/08 - moved list of rejected features to Unfuddle 796
10/2/08 - move default left edge of zoomed view to -3400, so that there is more space to right of default terminus
******* 1.00.07 (24829)
9/29/08 - get rid of scale calls in BoreholeDrillNode, resize image files
9/29/08 - [750] make borehole drill draggable by fire button
9/29/08 - set hgap and vgap to zero for control panel FlowLayouts
> change default snowfall to 0.93m (was 0.95m)
9/29/08 - [730] change default snowfall to 0.93m (was 0.95m) so that entire default glacier fits in zoomed viewport at new x-axis scale
9/29/08 - [730] change x-axis scale from 0.062 to 0.1 so that 80km fills most of the birds-eye view
> make Glacial Budget Meter tool snap to surface of ice or valley when it is released
9/29/08 - [733] glacial budget meter snap to valley floor and show values for x<0 ,like it does for x>=0
9/29/08 - [733] make glacial budget meter snap to glacier surface (or valley surface) when released, ala tracer flags
> replace "Show glacier picture" check box with "Show glacier picture" button
9/29/08 - [732] change glacier picture button to use text "Show glacier picture"
9/20/08 - reposition sample help items so they don't overlap any controls
9/20/08 - increase glacial budget meter snap threshold to 1.5x what it is now (150 meters)
9/20/08 - bugfix: Save should save zoomed viewport position
9/20/08 - bugfix: Reset All does not reset viewport position
9/20/08 - add tools to birds-eye view
9/16/08 - add help item for toolbox node in zoomed viewport
9/16/08 - fix common Help so that help ballons can be attached to nodes on any PLayer
******* 1.00.06 (24518)
9/16/08 - add bubbles to sample help items to demonstrate improved legibility
******* 1.00.05 (24516)
9/16/08 - add a couple of sample help items, with no help bubble as requested by Wendy
9/16/08 - set a fixed range for x-axis in "glacial budget vs elevation" chart